# dbindex

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
src/: app_context.py  dbadapter.py  exasol_adapter.py  main.py
src/dbindex/: __init__.py  app_context.py  exasol_adapter.py  types.py
tests/: test_exasol_adapter.py
