[project]
name = "dbindex"
version = "0.1.0"
description = "An MCP server to access metadata on databases"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pyexasol>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v"]